--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body{
 	line-height: 1.6;
 	color: #fff;
 	background-color: #111111;
+	background-size: cover;
 	overflow: hidden;
 	height: 100vh;
 	-webkit-transition: all 300ms linear;
@@ -90,7 +91,7 @@ a:hover {
     background-image: url('https://wallpaperaccess.com/full/7167569.png');
     background-size: 50%;
     background-position: bottom;
-    background-repeat: no-repeat; /* Prevent background image from repeating */
+    background-repeat: no-repeat;
     transform: scale(1) rotateX(0);
     box-shadow: 0 0 40px rgba(0,0,0,0.2);
     -webkit-transition: all 300ms linear;
