--- a/style.css
+++ b/style.css
@@ -226,7 +226,8 @@ body.nature-on .hero-section {
 	left: 0;
 	width: 100%;
 	display: block;
-	overflow: hidden;
+	overflow-x: hidden;
+	overflow-y: hidden;
 	height: 100vh;
 	background-color: #111111;
 	transform: translateX(-100%);
@@ -327,7 +328,8 @@ body.about-on .about-section {
 	left: 0;
 	width: 100%;
 	display: block;
-	overflow: hidden;
+	overflow-x: hidden;
+	overflow-y: hidden;
 	height: 100vh;
 	background-color: #111111;
 	transform: translateX(100%);
@@ -399,7 +401,7 @@ body.contact-on .contact-section {
 	height: 100vh;
 	display: block;
 	overflow-x: hidden;
-	overflow-y: auto;
+	overflow-y: hidden;
 	background-color: #111111;
 	-webkit-transition: all 300ms linear;
 	transition: all 300ms linear;
