--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@ body{
 	color: #fff;
 	background-color: #111111;
 	background-size: cover;
-	overflow: hidden;
+	overflow-x: hidden;
+	overflow-y: hidden;
 	height: 100vh;
 	-webkit-transition: all 300ms linear;
 	transition: all 300ms linear;
@@ -86,7 +87,8 @@ a:hover {
     position: relative;
     width: 100%;
     display: block;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: hidden;
     height: 100vh;
     background-image: url('https://wallpaperaccess.com/full/7167569.png');
     background-size: 50%;
